assets/scss/trading.sass
.trading-table
  .table
    tbody
      tr:first-child
        border-bottom: 1px solid
        border-top: 1px solid
        border-color: #7791A3

.dropdown-item:hover
  background-color: darkgray

.truncate-pair
	white-space: nowrap
	overflow: hidden
	text-overflow: ellipsis
	display: inline-block
	max-width: 90%
	vertical-align: middle

@media (min-width: 576px)
  .trading-table
    .table
      thead
        th:first-child
          display: table-cell !important
      tbody
        tr
          td:first-child
            display: table-cell !important

.top-holders
  td:not(:first-child)
    white-space: nowrap

  .holder-name
    width: calc(100% - 2em)
    min-width: 70px

#token
  ul.nav .token-avatar-left
    margin-left: $token-avatar-margin-left
    background: transparent
    z-index: 99

    a
      background: transparent

  .token-avatar
    z-index: 9
    margin-left: calc(#{$token-avatar-margin-left} + 20px) !important

    .avatar
      position: absolute
      transform: translateY(30px)
      border-radius: 50%
      width: 120px
      height: 120px
      left: 20px

